--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
 
         <!-- Slideshow Section -->
         <section class="section">
-            <h2>📸 Memory Lane</h2>
+            <h2>you mean the world to me, more than anyone could <3</h2>
             <div class="slideshow-container">
                 <button class="slide-nav prev" onclick="changeSlide(-1)">❮</button>
                 
