--- a/index.html
+++ b/index.html
@@ -326,8 +326,7 @@
         <section class="section">
             <h2>💕 HAPPY BIRTHDAY MY LOVERGIRL 💕</h2>
             <div class="gif-container">
-                <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
-                <img src="https://tenor.com/view/celebration-celebration-dance-love-you-i-love-you-so-much-cinnamoroll-sanrio-character-gif-18294816700466978888" alt="Special GIF" class="tenor-gif">
+                <img src="https://media.tenor.com/LdrTlDA-y_oAAAAM/celebration-celebration-dance.gif" alt="Special GIF" class="tenor-gif">
             </div>
         </section>
 
