--- a/index.html
+++ b/index.html
@@ -319,14 +319,14 @@
     <div class="container">
         <header>
             <h1>🎂 HAPPY BIRTHDAY BABYYYY 🎉</h1>
-            <p class="subtitle">your special day, is my special day, because it celebrates when someone as beautiful as you was born <3</p>
+            <p class="subtitle">your special day, is as special to me too, because it celebrates when someone as beautiful as you was born <3</p>
         </header>
 
         <!-- GIF Section -->
         <section class="section">
             <h2>💕 HAPPY BIRTHDAY MY LOVERGIRL 💕</h2>
             <div class="gif-container">
-                <img src="https://media.tenor.com/LdrTlDA-y_oAAAAM/celebration-celebration-dance.gif" alt="Special GIF" class="tenor-gif">
+                <img src="https://media1.tenor.com/m/LdrTlDA-y_oAAAAC/celebration-celebration-dance.gif" alt="Special GIF" class="tenor-gif">
             </div>
         </section>
 
@@ -493,7 +493,7 @@
             setTimeout(() => {
                 const normalizedRotation = currentRotation % 360;
                 const arc = 360 / wheelItems.length;
-                const pointerAngle = (90 - normalizedRotation) % 360;
+                const pointerAngle = (270 - normalizedRotation) % 360;
                 const adjustedAngle = pointerAngle < 0 ? pointerAngle + 360 : pointerAngle;
                 const winningIndex = Math.floor(adjustedAngle / arc) % wheelItems.length;
                 const winner = wheelItems[winningIndex];
